--- a/export-network.Rmd
+++ b/export-network.Rmd
@@ -3,10 +3,10 @@ title: "Social network analysis HW1: export-network"
 author: "Yijia Lin, Diego Paroli"
 date: "2025-04-23"
 output:
+  html_document: default
   pdf_document:
     latex_engine: xelatex
     keep_tex: true
-  html_document: default
 knitr:
   opts_chunk:
     screenshot.force: true
@@ -157,7 +157,7 @@ The node with the highest degree is that of mechanical components, indicating th
 transitivity(graph, type = "global")
 ```
 
-The global transitivity of this network is 0.4297, which is closer to 0 than to 1, indicating a modest tendency of clustering. Less than half of the time, when two nodes share a common neighbor, they will also be directly connected to each other. This could indicate that not always countries tend to specialize on the same products.
+The global transitivity of this network is 0.4297, which is closer to 0 than to 1, indicating a modest tendency of clustering. Less than half of the time, when two nodes share a common neighbor, they will also be directly connected to each other. This could indicate that often, but not always countries tend to specialize on the same products.
 
 ## 5. What is the assortativity (degree) in the network?
 
@@ -225,27 +225,20 @@ for (i in 1:num_simulations) {
 }
 ```
 
-Here we use the method "vl" (Viger–Latapy) as it is the one suggested for undirected connected graphs.
-
-Once we have generated the networks we want to proceed with evaluation and test of statistical difference.
+Here we use the method "vl" (Viger–Latapy) as it is the one suggested for undirected connected graphs. We simulated 1000 graphs to ensure that we can statistically meaningful conclusions.
 
 ```{r}
 original_clustering
 mean(simulated_clustering)
 ```
 
+The two values seem to be really different from each other, but we want to proceed with a more statistically sound test (t-test), checking whether the observed clustering coefficient is significantly greater than what would be expected under a random graph with the same degree distribution.
+
 ```{r}
-t.test(x = simulated_clustering, mu = original_clustering, alternative = "two.sided")
+t.test(x = simulated_clustering, mu = original_clustering, alternative = "less")
 ```
 
-
-We tested whether the clustering coefficient of the original network can
-be explained solely by its degree distribution, by comparing it to 1000
-configuration model networks with the same degree sequence. The original
-network’s clustering coefficient was **0.4297**, while the average
-clustering coefficient from the configuration models was **0.034**.
-
-Therefore we can conclude that the clustering structure in the original network **cannot be explained** by degree distribution alone — it has significant non-random structure peculiar to the network.
+We tested whether the clustering coefficient of the original network can be explained solely by its degree distribution, by comparing it to 1000 configuration model networks with the same degree distribution. The original network’s clustering coefficient was **0.42**, while the average clustering coefficient from the configuration models was **0.034**. The result of the t-test showed that the observed value is significantly higher than the expected values under the null model (p-value < 0.01). This allows us to reject the null hypothesis, and conclude that the clustering structure in the original network **cannot be explained** by degree distribution alone — it has significant non-random structure peculiar to the network. Therefore, the network exhibits a structural clustering that goes beyond what would be expected by random connections among nodes with the same degrees.
 
 ## 8. Visualize the neighborhood of the node with the largest centrality (closeness)
 
@@ -253,7 +246,7 @@ Therefore we can conclude that the clustering structure in the original network 
 which.max(closeness(graph))
 ```
 
-We discovered that the node with the largest centrality/closeness is "SLAG WOOL.ROCK WOOL AND SIMILAR MINERAL WOOLS". Apparently these are insulating materials coming from minerals.
+We discovered that the node with the largest centrality/closeness is "SLAG WOOL.ROCK WOOL AND SIMILAR MINERAL WOOLS". Apparently these are insulating materials coming from minerals. This node is the one that on average is closest to all other nodes. In our context this could be interpreted as a product which does not require particular specialization as from it it is possible to reach all other products in just a few steps.
 
 ```{r}
 head(neighbors(graph,"SLAG WOOL.ROCK WOOL AND SIMILAR MINERAL WOOLS"))
@@ -290,13 +283,16 @@ This plot looks a little bit messy, as the labels are very long so it's difficul
 ```{r}
 library(visNetwork)
 nodes <- data.frame(id = V(g)$name, label = V(g)$name)
-edges <- data.frame(from = as.character(ends(g, E(g))[,1]), to = as.character(ends(g, E(g))[,2]))
+edges <- data.frame(from = as.character(ends(g, E(g))[,1]), 
+                    to = as.character(ends(g, E(g))[,2]))
 
 visNetwork(nodes, edges) %>%
   visEdges(color = list(color = "gray", hover = "red")) %>%
   visNodes(size = 15, color = list(background = "lightblue", border = "darkblue")) %>%
   visOptions(highlightNearest = TRUE, nodesIdSelection = TRUE) %>%
   visLayout(randomSeed = 123)
+
+# NOTE: In the `.pdf` document we are only able to show a screenshot of the graph
 ```
 
-NOTE: As these is a `.pdf` document we are only able to show a screeenshot of the graph
+It is hard to find any pattern for the neighbors of our central node. Lots of them seem to be agricultural products that do not require particular skills or conditions to be produced, the rest of them seem to be construction materials or other intermediate goods/machinery.
